--- a/data/example.html
+++ b/data/example.html
@@ -17,11 +17,14 @@
         .video-js {
             width: 88vw;
             height: 100vh;
-            font-family: Arial, sans-serif;
-  font-size: inherit;
-  background: inherit;
-  border: none;
-  box-shadow: none;
+        }
+
+        .vjs-theme-modern.video-js {
+          font-family: Arial, sans-serif;
+          font-size: inherit;
+          background: inherit;
+          border: none;
+          box-shadow: none;
         }
 
 .vjs-theme-modern .vjs-control-bar {
