--- a/data/example.html
+++ b/data/example.html
@@ -85,6 +85,7 @@
 </div>
 
 <script>
+// This is used to scroll to the bottom of the page so the player appears in full instead of its controls cut off when the page loads
 window.onload = function () {
       window.scrollTo(0, document.body.scrollHeight);
 };
